syntax = "proto3";
package example;

// A+-----+
// ^      v
// +-----+B
message A {
  B b = 1;
}

message B {
  A a = 1;
}

// C+-->Self+--+
//        ^    |
//        +----+
message C {
  Self self = 1;
}

message Self {
  Self self = 1;
}

// D+-->Fuga+-->Piyo
//       ^        +
//       |        |
//       +--------+
message D {
  Fuga fuga = 1;
  string dummy1 = 2;
}

message Fuga {
  Piyo piyo = 1;
  string dummy2 = 2;
}

message Piyo {
  D d = 1;
  string dummy3 = 2;
}

//     oneof
// E+-------->List
// ^            +
// |  repeated  |
// +------------+
message E {
  oneof oneof {
    List list = 1;
    string str = 2;
  }
}

message List {
  repeated E a = 1;
}

//    repeated
// G+---------->M1Entry
// ^              +
// |              v
// +-------------+H
message F {
  map<string, E> m = 1;
}

// field m1 and m2 have the same structure.
message G {
  map<string, H> m1 = 1;

  message M {
    string key = 1;
    H val = 2;
  }
  repeated M m2 = 2;
}

message H {
  G g = 1;
}

message Filters {
    string name = 1;
    repeated Filters and = 2;
    repeated Filters or = 3;
}

message FooRequest {
    Filters filters = 1;
    int32 page = 2;
    int32 limit = 3;
}

message Q {
  K k = 1;
  K k2 = 2;
}

message K {}

message I {
  K k = 1;
  J j = 2;
}

message J {
  K k = 1;
}

message empty {}
