syntax = "proto3";

package example;

service MapService {
  rpc Primitive (PrimitiveRequest) returns (Response) {}
  rpc Message (MessageRequest) returns (Response) {}
}

message PrimitiveRequest {
  map<string, string> foo = 1;
}

message Hoge {
  string fuga = 1;
  int32 piyo = 2;
}

message MessageRequest {
  map<string, Hoge> foo = 1;
}

message Response {}
