syntax = "proto3";
package library;

service Library {
  rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse) {}
  rpc NestedBorrowBook(NestedBorrowBookRequest) returns (BorrowBookResponse) {}
}

message Person {
  string name = 1;
}

message Book {
  string title = 1;
  string author = 2;
}

message BorrowBookRequest {
  Person person = 1;
  Book book = 2;
}

message BorrowBookResponse {
  string message = 1;
}

message NestedBorrowBookRequest {
  enum BookType {
    EARLY = 0;
    PHILOSOPHY = 1;
    HISTORY = 2;
    SCIENCE = 3;
  }
  message Person {
    string name = 1;
    int32 age = 2;
  }
  Person person = 1;
  Book book = 2;
  BookType type = 3;
}
