syntax = "proto3";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  repeated string name = 1;
}

message HelloResponse {
  string message = 1;
}
